# yax_jeju

./: .gitignore  HL FMA 2025.ipynb  README.md  hsv_cali.py  iterative_ransac.py  turtlebot_joy_combined.py
RTK_GPS_NTRIP/ntrip_client/launch/: ntrip_client_launch.py
UTM_conversion/install/: local_setup.sh  setup.sh
UTM_conversion/install/latlong_utm/lib/latlong_utm/: latlonpub  lattoutm  listener  talker  utmpub  utmtolat
UTM_conversion/install/latlong_utm/share/latlong_utm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
UTM_conversion/log/: latest_build
UTM_conversion/src/latlong_utm/: setup.cfg
UTM_conversion/src/latlong_utm/latlong_utm/: latlon.py  latlong_to_utm.py  utm_to_latlong.py  utmpubfunc.py
camera_perception_pkg/camera_perception_pkg/: lane_info_extractor_node.py  traffic_light_detector_node.py  yolov8_traffic_light_node.py
camera_perception_pkg/camera_perception_pkg/lib/: __init__.py
camera_perception_pkg/camera_perception_pkg/lib/Collected_Datasets/2025_09_27_104928/: driving_log.csv
camera_perception_pkg/camera_perception_pkg/lib/Collected_Datasets/2025_09_27_111912/: driving_log.csv
camera_perception_pkg/camera_perception_pkg/lib/Collected_Datasets/2025_09_27_151347/: driving_log.csv
camera_perception_pkg/launch/: camera_lane.launch.py
control/driving/: driving.ino
data_collection/: data_collection.py
decision_making_pkg/: setup.py
decision_making_pkg/config/: output (10).csv  params.yaml  test2.csv
decision_making_pkg/decision_making_pkg/: cmd_vel_to_motion_command.py  fake_gps_publisher.py  forward_driver_node.py  gps_goto_node.py
decision_making_pkg/waypoints/: waypoint.csv
launch_pkg/: package.xml
launch_pkg/launch/: 2026ev_launch.py  full_launch12.py
lidar_perception_pkg/: CMakeLists.txt  package.xml
lidar_perception_pkg/src/: iterative_ransac.cpp  lidar_obstacle_detector_node.py  lidar_processor_node.py  lidar_publisher_node.py  prac.cpp
my_custom_pkg/: setup.cfg  setup.py
my_custom_pkg/config/: params.yaml
my_custom_pkg/launch/: mission_launch.py
my_custom_pkg/my_custom_pkg/: obstacle_detect_node.py  waypoint_follower_node.py
my_custom_pkg/my_custom_pkg/lib/: pid_controller.py
src/UTM_conversion/: README.md
src/UTM_conversion/src/latlong_utm/: setup.py
src/camera_perception_pkg/: setup.py
src/camera_perception_pkg/camera_perception_pkg/: image_publisher_node.py  object_detector_node.py  yolov8_node.py
src/camera_perception_pkg/camera_perception_pkg/lib/Collected_Datasets/2025_09_27_110517/: driving_log.csv
src/camera_perception_pkg/camera_perception_pkg/lib/Collected_Datasets/2025_09_27_110634/: driving_log.csv
src/data_collection/: closed_loop_trajectory_following.py  data_collection_g.py  new_data_collection.py  replay.py
src/decision_making_pkg/config/: pleft.csv  tright.csv  waypoints_center.csv
src/decision_making_pkg/decision_making_pkg/: motion_planner_node.py  parking_replay_node.py  yolov8_cone_and_yellow_node.py
src/decision_making_pkg/decision_making_pkg/lib/: pid_controller.py
src/decision_making_pkg/waypoints/: demo_waypoints.yaml
src/launch_pkg/launch/: full_launch.py  main_original.py  video_lane_detection.py
src/lidar_perception_pkg/lidar_perception_pkg/: lidar_obstacle_detector_node.py  lidar_processor_node.py
src/lidar_perception_pkg/lidar_perception_pkg/lib/: __init__.py
src/my_custom_pkg/: package.xml
src/my_custom_pkg/my_custom_pkg/: lane_detection_node.py  mission_controller_node.py  tunnel_nav_node.py
src/serial_communication_pkg/serial_communication_pkg/: serial_sender_node.py
ydlidar_ros2_driver/launch/: ydlidar_launch_view.py
