<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_custom_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2021145074@yonsei.ac.kr">jsmoon</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interfaces_pkg</depend>
  <exec_depend>camera_perception_pkg</exec_depend>
  <exec_depend>decision_making_pkg</exec_depend>
  <depend>fix2nmea</depend>
  <exec_depend>serial_communication_pkg</exec_depend>
  <depend>ydlidar_ros2_driver</depend>
  <depend>ublox_gps</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
